Fix SonarQube issues in SonarVulnerableExamples
Use prepared statements, secure random, SHA-256, try-with-resources,
and specific exceptions. Add unit tests for new code coverage.